completed integration of basic functionality of webcam facetracker. loading correctly, image not squished, converted track_webcam to class object and expanded to have clean feed.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -117,3 +117,17 @@ label {
 .button:hover {
   background-color: #81a2be;
 }
+
+.stream-container {
+  position: fixed;
+  width: 600px;
+  height: 600px;
+  overflow: hidden;
+  margin: 0 auto;
+
+}
+#stream-feed {
+  left: 50% !important;
+  margin-left: -700px;
+  position: absolute;
+}
